Game Engine Fixes

--- a/platforms/ios/www/game.html
+++ b/platforms/ios/www/game.html
@@ -46,20 +46,25 @@
             </div>
         </div>
 	<div id="wrong">
-        <div id="question" style="display:none" align="center">
+        <div id="question" class="questionClass" style="display:none" align="center">
+            <span id="questionSpan"></span>
         </div>
         <div id="questionCont" style="display:none">
             <div id="answerA" class="answer" align="center">
+                <span id="answerAtext"></span>
             </div>
             <div id="answerB" class="answer" align="center">
+                <span id="answerBtext"></span>
             </div>
             <div id="answerC" class="answer" align="center">
+                <span id="answerCtext"></span>
             </div>
             <div id="answerD" class="answer" align="center">
+                <span id="answerDtext"></span>
             </div>
         </div>
 		<div id="highscoreCont" style="display:none;">
-			<div style="font-family: 'fido'; font-size:14px ;text-align: center; margin-bottom: 3%">Congrats! You made your Highscore!</div>
+			<div style="font-family: 'fido'; font-size:14px ;text-align: center; margin-bottom: 3%">Congrats! You made the Highscore!</div>
 			<input type="text" name="highName"></input>
 		</div>
         <button id="ok" type="button" style="display: none;" class="btn btn-danger ">OK!</button>
