--- a/platforms/ios/www/instructions.html
+++ b/platforms/ios/www/instructions.html
@@ -50,11 +50,11 @@
                 <li>A question will appear on the screen related to allergy awareness.</li>
                 <li>Four possible answers will appear.</li>
                 <li>If you guess the right answer, you will get a point.</li>
-                <li>If not, you will lose a life</li>
+                <li>If not, you will lose a life.</li>
                 <li>After you lose three lives, it will be Game Over!</li>
             </ul>
             <div style="margin-top: 4%; font-size: 14px; font-family: 'Verdana';">Alright, lets get started!</div>
-            <div style="margin-left: auto; margin-right: auto; width: 80px; margin-top: 12%">
+            <div style="margin-left: auto; margin-right: auto; width: 80px; margin-top: 10%">
                 <input id="inNext" type="image" src="img/Next-Button.jpg" alt="Submit" width="80" height="50">
             </div>
         </div>
