--- a/www/highscore.html
+++ b/www/highscore.html
@@ -27,27 +27,26 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <script src="js/jquery-2.1.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/index.js"></script>
         <script src="js/highscore.js"></script>
         <script src="jquery.mobile.custom/jquery.mobile.custom.js"></script>
         <link rel="stylesheet" type="text/css" href="jquery.mobile.custom/jquery.mobile.custom.structure.css"/>
         <link rel="stylesheet" type="text/css" href="jquery.mobile.custom/jquery.mobile.custom.theme.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <link rel="stylesheet" type="text/css" href="css/highscore.css" />
+        <link rel="stylesheet" type="text/css" href="css/highscore.css"/>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     </head>
     <body>
-        <div data-role="header" style="padding-top: 20px; font-family: 'fido'; font-size:14px">
-            <a id="reload" onClick="location.href='index.html'" style="padding-top: 25px;">
+        <div data-role="header" style="padding-top: 20px; font-family: 'fido'; font-size:16px">
+            <a id="reload" onClick="location.href='index.html'" style="padding-top: 28px;">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <h1>High Score</h1>
         </div>
 	<div id="highscoreDiv">
-		<div id="congrats"></div>
-		<div id="score"></div>
-		<div id="lets">Let's see if you can beat it!</div>
+		<div id="congrats" style="display: none;"></div>
+		<div id="score" style="display: none;"></div>
+		<div id="lets" style="display: none;">Let's see if you can beat it!</div>
 	</div>
 	<button onClick="location.href='index.html'" id="highScoreOK" type="button" class="btn btn-danger ">OK!</button>
         </div>
