Correction sreen beta added

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -36,7 +36,7 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     </head>
     <body style="background-color: white;">
-        <div data-role="header" style="padding-top: 20px; font-family: 'fido'; font-size:16px">
+        <div data-role="header" data-position="fixed" style="padding-top: 20px; font-family: 'fido'; font-size:16px">
             <h1>Main Menu</h1>
         </div>
         <div id="index" style="display:none">
