--- a/platforms/ios/www/highscore.html
+++ b/platforms/ios/www/highscore.html
@@ -37,7 +37,7 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     </head>
     <body>
-        <div data-role="header" style="padding-top: 20px; font-family: 'fido'; font-size:16px">
+        <div data-role="header" data-position="fixed" style="padding-top: 20px; font-family: 'fido'; font-size:16px">
             <a id="reload" onClick="location.href='index.html'" style="padding-top: 28px;">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
