White flash fix on index

--- a/platforms/android/assets/www/game.html
+++ b/platforms/android/assets/www/game.html
@@ -67,11 +67,13 @@
 			<div style="font-family: 'fido'; font-size:14px ;text-align: center; margin-bottom: 3%">Congrats! You made the Highscore!</div>
 			<input type="text" name="highName"></input>
 		</div>
-        <div id="right">
-            <div class="rightQuestion"></div>
-            <div class="rightAnswer"></div>
-            <button id="ok" type="button" style="display: none;" class="btn btn-danger ">OK!</button>
-        </div>
+        <button id="ok" type="button" class="btn btn-danger">OK!</button>
 	</div>
+    <div id="right" style="display: none;">
+        <div id="rightQuestion" align="center">
+        </div>
+            <div id="rightAnswer" align="center"></div>
+            <button id="go" type="button"  class="btn btn-success ">OK!</button>
+        </div>
     </body>
 </html>
