--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -19,7 +19,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<html style="background-color: white;">
+<html>
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
