--- a/www/game.html
+++ b/www/game.html
@@ -70,9 +70,9 @@
         <button id="ok" type="button" class="btn btn-danger">OK!</button>
 	</div>
     <div id="right" style="display: none;">
-        <div id="rightQuestion" align="center">
+        <div id="rightAnswer" align="center">
         </div>
-            <div id="rightAnswer" align="center"></div>
+            <div id="rightQuestion" align="center"></div>
             <button id="go" type="button"  class="btn btn-success ">OK!</button>
         </div>
     </body>
