--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     </head>
     <body style="background-color: white;">
         <div data-role="header" data-position="fixed" style="padding-top: 20px; font-family: 'fido'; font-size:16px">
-            <h1>Main Menu</h1>
+            <h1>Main Menu (Beta Version)</h1>
         </div>
         <div id="index" style="display:none">
             <img id="logo" src="img/logo.png" width="300" height="140">
