--- a/www/instructions.html
+++ b/www/instructions.html
@@ -48,7 +48,7 @@
             <div style="margin-top: 4%; font-size: 14px; font-family: 'Verdana';">The rules are simple:</div>
             <ul style="margin-top: 4%; font-size: 14px; font-family: 'Verdana';">
                 <li>A question will appear on the screen related to allergy awareness.</li>
-                <li>Four possible answers will appear.</li>
+                <li>A few possible answers will appear.</li>
                 <li>If you guess the right answer, you will get a point.</li>
                 <li>If not, you will lose a life.</li>
                 <li>After you lose three lives, it will be Game Over!</li>
